# robust_geometric_predicates

./: CMakeLists.txt  IDENTIFICATION.txt  README.md  Sanitizers.cmake
app/: test_interval.cpp  test_kernel.cpp
include/ra/: interval.hpp  kernel.hpp
